--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </style>
 
 <body>
-    <h1>Papers in Ethics & Philosophy</h1>
+    <h1>Audrey Graham Portfolio</h1>
     <div>
         <div>
             <h2>Technology &mdash; Artificial Intelligence</h2>
