changed title & continue reading to my files

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         <div>
             <h2>Technology &mdash; Artificial Intelligence</h2>
             <div>
-                <h3>Governing Advancement, 2022</h3>
+                <h3>The Association Between Screen Time in Infancy and Developmental Delays in Childhood, 2024</h3>
                 <p>
                     There exists now a technological world which is advancing faster than can be governed.
 This is clear in cases of intellectual property laws as they apply to software and the strong debate around what should be mandated. As the world begins to move faster, it is harder to understand all its advancements and protect those who may be vulnerable to their negative effects. Therefore, it is essential to understand and properly regulate advancements in every industry and govern their advancement in a fair, but appropriate manner to protect from the very real negative effects. Modern medicine must withgo many trials and audits before it can be administered to the customer which has created a safer, stronger medical industry. While technology may be seen under a very different light than drugs, new technologies are showing possibly stronger effects on the mind than any medicine could ever. Should technology then be regulated to the same standards as medicine, what would that look like, and would that be beneficial.
                 </p>
-                <a href="../papers/343-e2.pdf" download>Continue Reading</a>
+                <a href="src/papers/The%20Association%20Between%20Screen%20Time%20in%20Infancy%20and%20Developmental%20Delays%20in%20Childhood.pdf" download>Continue Reading</a>
             </div>
             <div>
                 <h3>Inherently Evil, or Evil by Design, 2021</h3>
